--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/springtest
 
 #自定义静态资源目录
 #spring.resources.static-locations=classpath:/myStatic/
+
+#文件上传大小限制
+spring.servlet.multipart.max-file-size=1KB
